--- a/src/app/blogs/blogs.component.html
+++ b/src/app/blogs/blogs.component.html
@@ -8,7 +8,7 @@
   </tr>
     <tr>
   <th>Date of Birth</th>
-      <td>{{user.dateOfBirth|date:'dd MM YYYY'}}</td>
+      <td>{{user.dateOfBirth|date:'dd.MM.YYYY'}}</td>
   </tr>
     <tr>
       <th>Salary</th>
