--- a/src/app/left-nav-bar/left-nav-bar.component.html
+++ b/src/app/left-nav-bar/left-nav-bar.component.html
@@ -8,10 +8,8 @@
   </ul>
 </nav>
 -->
-<nav>
-  <p> MENU </p>
-  <hr class="rounded">
-  <ul  class="menu">
+<!--<nav fxLayout="column"  fxFlexFill fxFlex = "10vw" fxLayoutAlign="start center" fxHide.lt-sm >
+  <ul style="padding: 0">
     <li><a routerLink="/home" routerLinkActive="active" >Home</a></li>
     <li><a [routerLink]="['/blogs',1]" routerLinkActive="active">Blogs</a></li>
     <li><a routerLink="/gallery" routerLinkActive="active">Gallery</a></li>
@@ -20,3 +18,30 @@
 
 </nav>
 
+<nav fxLayout="row"   fxHide.gt-xs>
+  <ul style="padding: 0">
+    HELLO
+    <li><a routerLink="/home" routerLinkActive="active">Home</a></li>
+    <li><a [routerLink]="['/blogs',1]" routerLinkActive="active">Blogs</a></li>
+    <li><a routerLink="/gallery" routerLinkActive="active">Gallery</a></li>
+    <li><a routerLink="/about" routerLinkActive="active">About</a></li>
+  </ul>
+</nav>-->
+
+<nav fxLayout="row" fxFlex="150"   fxLayout="row" fxFlex="100%"  fxHide.gt-xs>
+  <ul style="padding: 0; margin: 0; display: flex; list-style: none;">
+    <li style="margin-right: 20px;"><a routerLink="/home" routerLinkActive="active" >Home</a></li>
+    <li style="margin-right: 20px;"><a [routerLink]="['/blogs',1]" routerLinkActive="active">Blogs</a></li>
+    <li style="margin-right: 20px;"><a routerLink="/gallery" routerLinkActive="active">Gallery</a></li>
+    <li><a routerLink="/about" routerLinkActive="active">About</a></li>
+  </ul>
+</nav>
+
+<nav fxLayout="column" fxFlexFill fxFlex = "10vw" fxLayoutAlign="start center" fxHide.lt-sm>
+  <ul style="padding: 0; margin: 0; list-style: none;">
+    <li><a routerLink="/home" routerLinkActive="active">Home</a></li>
+    <li><a [routerLink]="['/blogs',1]" routerLinkActive="active">Blogs</a></li>
+    <li><a routerLink="/gallery" routerLinkActive="active">Gallery</a></li>
+    <li><a routerLink="/about" routerLinkActive="active">About</a></li>
+  </ul>
+</nav>
