--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,5 @@
 body{
-  height: 100%;
   display: flex;
-  min-height: 100vh;
 }
 
 button{
@@ -13,7 +11,7 @@ button{
   background-color: #374821;
   color: #eeeeee;
 }
-
+nav{display: inline-flex}
 .items p{
 margin: -1px
 }
