--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,25 +1,16 @@
 header{
-  position: fixed;
-  left:0;
-  top:0;
+  display: flex;
   background-color: #b4c49c;
   height: 90px ;
-  width: 100%;
 }
-div{
-  display: flex;
-  padding-left: 40px;
-}
+
 .logo{
-  margin-left: 30%;
-  width: 90px;
-  height: 90px;
+  width: 20%;
+  height: 20%;
 }
 
 .name{
-  margin-top: 18px;
-  margin-left: 10px;
-  font-size: 60px;
+  font-size: 4vw;
   font-family: 'Helvetica Neue', sans-serif;
   font-weight: bold;
   letter-spacing: 1px;
@@ -28,23 +19,24 @@ div{
 }
 
 .user{
-  padding-left: 390px;
-  padding-top: 40px;
   font-family: 'Helvetica Neue', sans-serif;
   letter-spacing: 1px;
-  font-size: 30px;
-  font-weight:550;
+  font-size: 1.8vw;
+
   color: #465d2c;
 }
 
 .user img{
-  margin-top: -7px;
-  width: 50px;
-  height: 50px;
+
+  width: 2vw;
+  height: 2vw;
 }
 
+a{
+  text-decoration: none;
+}
 a:link {color:#465d2c;}
-a:hover {font-family:monospace;}
+a:hover {text-decoration: #374821 wavy underline;}
 a:visited {color: #374821;}
 
 
