--- a/src/app/left-nav-bar/left-nav-bar.component.css
+++ b/src/app/left-nav-bar/left-nav-bar.component.css
@@ -1,33 +1,19 @@
 nav {
-  height: 100%;
-  width: 250px;
-  position: fixed;
-  left: 0;
-  margin-top: 80px;
+  display:flex;
+  width: 100%;
   background-color: #4A642D;
   color: #b5c4a8;
   font-family: 'Helvetica Neue', sans-serif;
 }
-.rounded {
-  border-top: 3px solid #b5c4a8;
-  border-radius: 5px;
-  margin-left: 10px;
-  margin-right: 10px;
-  margin-top: -10px;
-}
-li {
-  font-size: 20px;
 
+li {
+  font-size: 15px;
   list-style-type: none;
   letter-spacing: 1px;
-  padding-bottom: 10px;
 }
 li:hover{
   background-color: #b4c49c;
   color: #374821;
-  font-size: 25px;
-  margin-left: -40px;
-  text-align: center;
   font-weight: bold;
 }
 .active{
@@ -35,8 +21,7 @@ li:hover{
   color: #374821;
 }
 p{
-  font-size: 30px;
-  margin-left: 30%;
+  font-size: 2vw;
 }
 a:link {color:#374821;}
 a:visited {color: #374821;}
