--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,13 @@
-<p>about works!</p>
+<mat-card fxFlexOffset="10" fxFlex="80" fxLayout="column" fxLayoutAlign="center center">
+  <mat-card-header>
+    <mat-card-title>About BestRecreation</mat-card-title>
+  </mat-card-header>
+  <mat-card-content fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="16px">
+    <div fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="16px">
+      <h2>Welcome to BestRecreation</h2>
+      <div fxLayoutAlign="center center" >We are a website dedicated to showcasing the best recreational places in the world. Whether you're looking for a relaxing beach vacation or an exciting adventure in the mountains, we have something for everyone.</div>
+      <div fxLayoutAlign="center center" >Our team of experts has carefully curated a list of top destinations based on factors such as natural beauty, accessibility, and cultural significance. We believe that travel should be an enriching experience that allows you to connect with different cultures and explore new perspectives.</div>
+        <div fxLayoutAlign="center center" >Thank you for visiting our site, and we hope that you find inspiration for your next adventure!</div>
+    </div>
+  </mat-card-content>
+</mat-card>
