--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -15,7 +15,7 @@
   </div>
 </footer>
 -->
-<footer class="footer" fxFill fxLayout="row" fxLayoutAlign="space-between center"
+<footer class="footer"  fxLayout="row" fxLayoutAlign="space-between center"
         fxLayout.xs="column" fxLayoutAlign.xs="center center">
   <div fxLayout="column" class="copyright">
     © Copyright Best Places Ltd
@@ -26,5 +26,7 @@
     <p><a [routerLink]="['/blogs',1]" routerLinkActive="active">Blogs</a></p>
     <p><a routerLink="/gallery" routerLinkActive="active">Gallery</a></p>
     <p><a routerLink="/about" routerLinkActive="active">About</a></p>
+    <p><a routerLink="/rating" routerLinkActive="active">Top 10</a></p>
+    <p><a routerLink="/advice" routerLinkActive="active">Advice</a></p>
   </div>
 </footer>
