--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,183 +1,6 @@
-
-
-.data{
-  margin-left:300px;
-  margin-top: 60px;
-  padding: 4rem 0;
-  width: 350px;
-  font-family: 'Open Sans', serif;
-
-}
-form {
-  box-sizing: border-box;
-  padding-top: 1rem;
-  padding-left: 2rem;
-  border-radius: 1rem;
-  background-color: hsl(92, 19%, 71%);
-  border: 4px solid hsl(88, 36%, 27%);
-  display: grid;
-  gap: 0.2rem;
-  padding-bottom: 20px;
-  margin-bottom: 20px;
+.mat-mdc-form-field,
+.mat-mdc-form-field[_ngcontent-ltk-c137]
+{
+  width: 100%;
 }
 
-fieldset,
-input,
-legend,
-textarea {
-  appearance: none;
-  width: 280px;
-}
-
-
-button,
-fieldset,
-input,
-legend,
-textarea {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  background-color: transparent;
-  border: none;
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-input:valid,
-input.ng-untouched,
-select,
-textarea {
-  border: 2px solid #333;
-  background-color: white;
-  border-radius: 0.25rem;
-}
-input.ng-invalid.ng-touched{
-  border: 2px solid red !important;
-  border-radius: 0.25rem;
-  background-color: white;
-}
-
-input[type="text"],
-input[type="email"],
-select,
-textarea {
-  font: 0.8rem / 1.2 sans-serif;
-  display: block;
-  box-sizing: border-box;
-  padding: 0.3rem 0.7rem;
-}
-.select-area{
-  padding-top: 0.3rem;
-  padding-bottom: 0.3rem;
-  display: flex;
-  align-items: center;
-}
-select{
-  margin-left: 7px;
-  width: 76%;
-}
-input[type="checkbox"] {
-  height: 1.5em;
-  width: 1.5em;
-  vertical-align: middle;
-}
-input[type="checkbox"]:checked {
-  background: url('https://assets.digitalocean.com/articles/68129/check.svg') no-repeat center / 75% auto;
-}
-
-.large-label {
-  display: inline-block;
-  font: bold 1.5rem sans-serif;
-  margin-bottom: 0.5rem;
-}
-
-.submit_cont {
-  margin-left:15px;
-  margin-top:20px
-
-}
-
-.submit {
-  font-family: 'Open Sans';
-  color: #494949;
-  text-transform: uppercase;
-  text-decoration: none;
-  width: 250px;
-  background: #ffffff;
-  padding: 20px;
-  border: 4px solid #374821;
-  display: inline-block;
-  transition: all 0.9s ease 0s;
-}
-
-.submit:hover {
-  color: #ffffff;
-  background: #658864;
-  border-color: #374823;
-  transition: all 0.9s ease 0s;
-}
-
-.subject-buttons {
-  margin-top: 5px;
-  margin-bottom: 5px;
-
-  display: flex;
-  align-items: center;
-
-}
-
-.subject-buttons>button {
-  margin-left: 20px;
-  height: 38px;
-  width: 90px;
-  font-family: 'Open Sans', serif;
-
-  background: #ffffff;
-  padding: 5px;
-  border: 4px solid;
-  text-decoration: none;
-  color: #374821 !important;
-  border-radius: 20px;
-  border-color: #374823 !important;
-}
-
-.subject-buttons>button:hover {
-
-  border:4px solid;
-  text-decoration: none;
-  color: #374823 !important;
-  background-color: #d7dcce;
-  border-radius: 50px;
-  border-color: #465d2c !important;
-}
-#subject-field{
-  display: flex;
-}
-
-#subject-field button{
-  margin-left: 7px;
-  margin-top: 5px;
-}
-
-.gender{
-  padding-top:5px;
-  padding-bottom:5px;
-}
-.gender input{
-  margin-left:10px;
-  margin-right: 3px;
-}
-
-.description{
-  padding-top:12px
-}
-
-button:disabled {
-  opacity: 0.5;
-  cursor: not-allowed;
-}
-
-.alert{
-  color: red;
-}
