--- a/src/app/left-nav-bar/left-nav-bar.component.css
+++ b/src/app/left-nav-bar/left-nav-bar.component.css
@@ -1,6 +1,4 @@
-nav {
-  display:flex;
-  width: 100%;
+div {
   background-color: #4A642D;
   color: #b5c4a8;
   font-family: 'Helvetica Neue', sans-serif;
