--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,21 +1,30 @@
 header{
-  display: flex;
   background-color: #b4c49c;
   height: 90px ;
 }
 
-.logo{
-  width: 20%;
-  height: 20%;
-}
 
 .name{
-  font-size: 4vw;
   font-family: 'Helvetica Neue', sans-serif;
   font-weight: bold;
   letter-spacing: 1px;
   line-height: 1;
   color: #567334;
+}
+.bigLogo{
+  font-size: 50px;
+}
+.bigImg{
+  width:50px;
+  height:50px;
+}
+.smallImg{
+  width: 35px;
+  height: 35px;
+}
+
+.smallLogo{
+  font-size: 35px;
 }
 
 .user{
@@ -26,11 +35,6 @@ header{
   color: #465d2c;
 }
 
-.user img{
-
-  width: 2vw;
-  height: 2vw;
-}
 
 a{
   text-decoration: none;
