--- a/src/app/left-nav-bar/left-nav-bar.component.html
+++ b/src/app/left-nav-bar/left-nav-bar.component.html
@@ -35,5 +35,7 @@
     <li style="margin-right: 20px;"><a routerLink="/rating" routerLinkActive="active">Top 10 </a></li>
     <li style="margin-right: 20px;"><a routerLink="/advice" routerLinkActive="active">Advice</a></li>
     <li><a routerLink="/about" routerLinkActive="active">About</a></li>
+    <li style="margin-right: 20px;"><a routerLink="/records" routerLinkActive="active">Records</a></li>
+
   </ul>
   </div>
